Add stock price chart with historical price data

--- a/static/index.html
+++ b/static/index.html
@@ -149,6 +149,12 @@
                     <h3>P/E Ratio Over Time</h3>
                     <canvas id="peChart" width="800" height="250"></canvas>
                 </div>
+
+                <!-- Price Chart -->
+                <div class="card">
+                    <h3>Stock Price History</h3>
+                    <canvas id="priceChart" width="800" height="300"></canvas>
+                </div>
             </div>
         </main>
     </div>
