Remove mock data - show real errors when APIs fail

--- a/static/index.html
+++ b/static/index.html
@@ -36,8 +36,9 @@
             </div>
 
             <div id="empty" class="empty">
-                <p>Enter a stock ticker to see earnings data and trends.</p>
-                <p class="examples">Try: AAPL, MSFT, GOOGL, NVDA, AMZN, META</p>
+                <p>Search for a stock to see real-time data and charts.</p>
+                <p class="examples">Try: AAPL, TSLA, MSFT, AMZN, NVDA</p>
+                <p style="margin-top: 20px; font-size: 13px; color: #64748b;">Data provided by Finnhub, Yahoo Finance, and Alpha Vantage</p>
             </div>
 
             <div id="results" class="hidden">
