--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,10 @@
 <body>
     <div class="container">
         <header>
-            <h1>🦞 Stock Research</h1>
+            <div class="header-content">
+                <h1>🦞 Stock Research</h1>
+                <span id="version" class="version">v0.1.0</span>
+            </div>
             <form id="searchForm">
                 <div class="search-container">
                     <input 
