[v1.0.2] Add 5 key metrics to overview: P/E, Revenue Growth, FCF, Debt/Equity, ROE

--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
         <header>
             <div class="header-content">
                 <h1>🦞 Stock Research</h1>
-                <span id="version" class="version">v1.0.1</span>
+                <span id="version" class="version">v1.0.2</span>
             </div>
             <form id="searchForm">
                 <div class="search-container">
@@ -70,30 +70,27 @@
                 <div id="overview" class="tab-content active">
                     <!-- Key Metrics Grid -->
                     <div class="card metrics-overview">
+                        <h3>Key Metrics</h3>
                         <div class="metrics-grid-compact">
-                            <div class="metric">
-                                <span class="metric-label">Current Price</span>
-                                <span id="currentPrice" class="metric-value"></span>
-                            </div>
-                            <div class="metric">
-                                <span class="metric-label">Market Cap</span>
-                                <span id="marketCap" class="metric-value"></span>
-                            </div>
-                            <div class="metric">
+                            <div class="metric" title="What you're paying for each dollar of earnings. Compare to industry peers and historical averages to gauge if the stock is cheap or expensive.">
                                 <span class="metric-label">P/E Ratio</span>
                                 <span id="peRatio" class="metric-value"></span>
                             </div>
-                            <div class="metric">
-                                <span class="metric-label">Profit Margin</span>
-                                <span id="profitMargin" class="metric-value"></span>
+                            <div class="metric" title="Year-over-year growth in revenue. Shows whether the business is expanding. Top-line growth is harder to fake than earnings.">
+                                <span class="metric-label">Revenue Growth (YoY)</span>
+                                <span id="revenueGrowth" class="metric-value"></span>
                             </div>
-                            <div class="metric">
-                                <span class="metric-label">ROE</span>
+                            <div class="metric" title="Cash left after running the business and capital expenditures. Available for dividends, buybacks, debt reduction, or reinvestment. More reliable than net income.">
+                                <span class="metric-label">Free Cash Flow</span>
+                                <span id="freeCashFlow" class="metric-value"></span>
+                            </div>
+                            <div class="metric" title="How leveraged the company is. High debt amplifies returns in good times but can be fatal in downturns. Shows financial risk and flexibility.">
+                                <span class="metric-label">Debt-to-Equity</span>
+                                <span id="debtToEquity" class="metric-value"></span>
+                            </div>
+                            <div class="metric" title="How effectively management converts shareholder capital into profits. Consistently high ROE (15%+) often signals a durable competitive advantage.">
+                                <span class="metric-label">Return on Equity</span>
                                 <span id="roe" class="metric-value"></span>
-                            </div>
-                            <div class="metric">
-                                <span class="metric-label">Beta</span>
-                                <span id="beta" class="metric-value"></span>
                             </div>
                         </div>
                     </div>
