[v1.0.2] Add back currentPrice and marketCap elements

--- a/static/index.html
+++ b/static/index.html
@@ -68,6 +68,20 @@
 
                 <!-- Tab Content: Overview -->
                 <div id="overview" class="tab-content active">
+                    <!-- Price & Market Cap -->
+                    <div class="card metrics-overview">
+                        <div class="metrics-grid-compact">
+                            <div class="metric">
+                                <span class="metric-label">Current Price</span>
+                                <span id="currentPrice" class="metric-value"></span>
+                            </div>
+                            <div class="metric">
+                                <span class="metric-label">Market Cap</span>
+                                <span id="marketCap" class="metric-value"></span>
+                            </div>
+                        </div>
+                    </div>
+                    
                     <!-- Key Metrics Grid -->
                     <div class="card metrics-overview">
                         <h3>Key Metrics</h3>
