[v1.0.2] Add missing profitMargin and beta elements

--- a/static/index.html
+++ b/static/index.html
@@ -139,12 +139,22 @@
                             </div>
                             <div class="metrics-row">
                                 <div class="metric-item">
-                                    <span class="metric-label">Dividend Yield</span>
-                                    <span id="dividendYield" class="metric-value"></span>
+                                    <span class="metric-label">Profit Margin</span>
+                                    <span id="profitMargin" class="metric-value"></span>
                                 </div>
                                 <div class="metric-item">
                                     <span class="metric-label">Operating Margin</span>
                                     <span id="operatingMargin" class="metric-value"></span>
+                                </div>
+                                <div class="metric-item">
+                                    <span class="metric-label">Dividend Yield</span>
+                                    <span id="dividendYield" class="metric-value"></span>
+                                </div>
+                            </div>
+                            <div class="metrics-row">
+                                <div class="metric-item">
+                                    <span class="metric-label">Beta</span>
+                                    <span id="beta" class="metric-value"></span>
                                 </div>
                                 <div class="metric-item">
                                     <span class="metric-label">Debt/Equity</span>
