--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
         <header>
             <div class="header-content">
                 <h1>🦞 Stock Research</h1>
-                <span id="version" class="version">v1.0.2</span>
+                <span id="version" class="version">v2.0.0-beta1</span>
             </div>
             <form id="searchForm">
                 <div class="search-container">
