[v2.0.0-beta1] Fix frontend: add missing metrics, ensure charts render on load

--- a/static/index.html
+++ b/static/index.html
@@ -106,6 +106,14 @@
                                 <span class="metric-label">Return on Equity</span>
                                 <span id="roe" class="metric-value"></span>
                             </div>
+                            <div class="metric" title="Net income as a percentage of revenue. Shows how much profit the company keeps from each dollar of sales.">
+                                <span class="metric-label">Profit Margin</span>
+                                <span id="profitMargin" class="metric-value"></span>
+                            </div>
+                            <div class="metric" title="Operating income as a percentage of revenue. Measures efficiency of core business operations.">
+                                <span class="metric-label">Operating Margin</span>
+                                <span id="operatingMargin" class="metric-value"></span>
+                            </div>
                         </div>
                     </div>
 
