[v2.0.0-beta1] Add full-screen price chart modal on click

--- a/static/index.html
+++ b/static/index.html
@@ -264,6 +264,20 @@
         </main>
     </div>
 
+    <!-- Full Screen Chart Modal -->
+    <div id="chartModal" class="chart-modal hidden">
+        <div class="chart-modal-backdrop"></div>
+        <div class="chart-modal-content">
+            <div class="chart-modal-header">
+                <h2 id="chartModalTitle">Stock Price History</h2>
+                <button id="closeChartModal" class="close-modal-btn">&times;</button>
+            </div>
+            <div class="chart-modal-body">
+                <canvas id="fullScreenPriceChart" width="1200" height="600"></canvas>
+            </div>
+        </div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
