--- a/index.html
+++ b/index.html
@@ -60,12 +60,15 @@
 
                 <!-- Tab Navigation -->
                 <div class="tabs">
+                    <div class="tab-indicator"></div>
                     <button class="tab-btn active" data-tab="overview">Overview</button>
                     <button class="tab-btn" data-tab="earnings">Earnings</button>
                     <button class="tab-btn" data-tab="financials">Financials</button>
                     <button class="tab-btn" data-tab="valuation">Valuation</button>
                 </div>
 
+                <!-- Tab Contents Container -->
+                <div class="tab-content-container">
                 <!-- Tab Content: Overview -->
                 <div id="overview" class="tab-content active">
                     <!-- Price & Market Cap -->
@@ -260,6 +263,7 @@
                         <canvas id="peChart" width="800" height="350"></canvas>
                     </div>
                 </div>
+                </div><!-- End tab-content-container -->
             </div>
         </main>
     </div>
