[v2.0.0-beta1] Add chart hover tooltips showing date and price

--- a/index.html
+++ b/index.html
@@ -330,6 +330,12 @@
         </main>
     </div>
 
+    <!-- Chart Tooltip -->
+    <div id="chartTooltip" class="chart-tooltip hidden">
+        <div class="tooltip-date"></div>
+        <div class="tooltip-value"></div>
+    </div>
+
     <!-- Full Screen Chart Modal -->
     <div id="chartModal" class="chart-modal hidden">
         <div class="chart-modal-backdrop"></div>
