--- a/static/index.html
+++ b/static/index.html
@@ -148,7 +148,7 @@
                     </div>
                     
                     <!-- Key Metrics Grid -->
-                    <div class="card metrics-overview">
+                    <div class="card metrics-overview metrics-key">
                         <h3>Key Metrics</h3>
                         <div class="metrics-grid-compact">
                             <div class="metric" title="What you're paying for each dollar of earnings. Compare to industry peers and historical averages to gauge if the stock is cheap or expensive.">
@@ -189,7 +189,7 @@
                     </div>
 
                     <!-- Valuation Metrics -->
-                    <div class="card metrics-overview">
+                    <div class="card metrics-overview metrics-valuation">
                         <h3>Valuation Metrics</h3>
                         <div class="metrics-grid-compact">
                             <div class="metric" title="Price-to-Sales ratio. Useful for valuing growth companies that may not be profitable yet. Lower is generally better.">
@@ -220,7 +220,7 @@
                     </div>
 
                     <!-- Profitability Metrics -->
-                    <div class="card metrics-overview">
+                    <div class="card metrics-overview metrics-profitability">
                         <h3>Profitability</h3>
                         <div class="metrics-grid-compact">
                             <div class="metric" title="Gross profit margin. Percentage of revenue left after cost of goods sold. Shows pricing power and production efficiency.">
@@ -243,7 +243,7 @@
                     </div>
 
                     <!-- Financial Health -->
-                    <div class="card metrics-overview">
+                    <div class="card metrics-overview metrics-health">
                         <h3>Financial Health</h3>
                         <div class="metrics-grid-compact">
                             <div class="metric" title="Current Ratio. Current assets divided by current liabilities. > 1.5 suggests good short-term liquidity.">
@@ -270,7 +270,7 @@
                     </div>
 
                     <!-- Market Data -->
-                    <div class="card metrics-overview">
+                    <div class="card metrics-overview metrics-market">
                         <h3>Market Data</h3>
                         <div class="metrics-grid-compact">
                             <div class="metric" title="52-week high. The highest price in the past year.">
