[v2.0.0-beta1] Add pulsing high/low markers and vertical indicator line on chart hover

--- a/index.html
+++ b/index.html
@@ -183,9 +183,19 @@
                     </div>
 
                     <!-- Price Chart -->
-                    <div class="card">
+                    <div class="card chart-container">
                         <h3>Stock Price History</h3>
-                        <canvas id="priceChart" width="800" height="300"></canvas>
+                        <div class="chart-wrapper">
+                            <canvas id="priceChart" width="800" height="300"></canvas>
+                            <div class="chart-overlay" id="priceChartOverlay"></div>
+                            <div class="chart-high-marker" id="highMarker">
+                                <div class="pulse-ring"></div>
+                            </div>
+                            <div class="chart-low-marker" id="lowMarker">
+                                <div class="pulse-ring"></div>
+                            </div>
+                            <div class="chart-indicator-line hidden" id="chartIndicatorLine"></div>
+                        </div>
                     </div>
 
                     <!-- Valuation Metrics -->
