[v2.0.0-beta1] Add section dividers, standardized chart heights, pull-to-refresh for mobile

--- a/index.html
+++ b/index.html
@@ -277,6 +277,13 @@
                         </div>
                     </div>
 
+                    <!-- Section Divider -->
+                    <div class="section-divider">
+                        <span class="divider-line"></span>
+                        <span class="divider-label">Valuation</span>
+                        <span class="divider-line"></span>
+                    </div>
+
                     <!-- Valuation Metrics -->
                     <div class="card metrics-overview metrics-valuation">
                         <h3>Valuation Metrics</h3>
@@ -308,6 +315,13 @@
                         </div>
                     </div>
 
+                    <!-- Section Divider -->
+                    <div class="section-divider">
+                        <span class="divider-line"></span>
+                        <span class="divider-label">Profitability</span>
+                        <span class="divider-line"></span>
+                    </div>
+
                     <!-- Profitability Metrics -->
                     <div class="card metrics-overview metrics-profitability">
                         <h3>Profitability</h3>
@@ -329,6 +343,13 @@
                                 <span id="roic" class="metric-value">-</span>
                             </div>
                         </div>
+                    </div>
+
+                    <!-- Section Divider -->
+                    <div class="section-divider">
+                        <span class="divider-line"></span>
+                        <span class="divider-label">Financial Health</span>
+                        <span class="divider-line"></span>
                     </div>
 
                     <!-- Financial Health -->
@@ -356,6 +377,13 @@
                                 <span id="workingCapital" class="metric-value">-</span>
                             </div>
                         </div>
+                    </div>
+
+                    <!-- Section Divider -->
+                    <div class="section-divider">
+                        <span class="divider-line"></span>
+                        <span class="divider-label">Market Data</span>
+                        <span class="divider-line"></span>
                     </div>
 
                     <!-- Market Data -->
